<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">prepNIMCET</string>
    <string name="lbl_email">Email</string>
    <string name="msg_don_t_have_an_a">Don\u2019t have an account? Register Now</string>
    <string name="msg_alr_d_have_an_a">Already have an account? Login Now</string>
    <string name="msg_confirm_passwor">Confirm password</string>
    <string name="msg_verification">Verification Link Send!</string>
    <string name="lbl_back_to_login">Back to Login</string>
    <string name="msg_don_t_worry_it">"Don/'t worry! It occurs. Please enter the email address linked with your account."</string>
    <string name="msg_agree_and_regis">Agree and Register</string>
    <string name="lbl_or_login_with">Or Login with</string>
    <string name="lbl_login">Login</string>
    <string name="msg_continue_as_a_g">Continue as a guest</string>
    <string name="msg_enter_your_pass">Enter your password</string>
    <string name="msg_verification_detail">A verification link has been send successfully.</string>
    <string name="msg_remember_passwo">Remember Password? Login</string>
    <string name="msg_enter_your_emai">Enter your email</string>
    <string name="lbl_password">Password</string>
    <string name="msg_forgot_password">Forgot Password?</string>
    <string name="lbl_send_code">Send Link</string>
    <string name="msg_welcome_back_g">Welcome back! Glad to see you, Again!</string>
    <string name="msg_create_account_g">Welcome! Ready to begin your journey with us…</string>
    <string name="lbl_register">Register</string>
    <string name="lbl_username">Name</string>
    <string name="default_web_client_id">370632523024-253cb06vpd6epausbj12g9h7brj4nb5v.apps.googleusercontent.com</string>

    <string name="quiz">Quiz</string>
    <string name="mock_test">Mock Test</string>

    <string name="profile">Profile</string>
    <string name="user_name">User Name</string>
    <string name="user_email">User Email</string>
    <string name="app_logo">App Logo</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share App</string>
    <string name="logout">Logout</string>
    <string name="feedback">Feedback</string>
    <string name="label">label</string>
    <string name="open_nav">Open Menu</string>
    <string name="close_nav">Close Menu</string>

    <string name="home">Home</string>
    <string name="articles">Articles</string>
    <string name="articles_title">Articles Title</string>
    <string name="articles_author">Articles Author</string>
    <string name="articles_date">Articles Date</string>
    <string name="blog_detail">Articles Detail</string>

    <!--About Icon String-->
    <string name="about">About</string>
    <string name="about_app">About App</string>
    <string name="app_description_para1">
        Application Name: prepNimcet
        \n
        \n
        Description:
        \n
        \n
        Prepare for the NIT MCA Common Entrance Test (NIMCET) with the ultimate exam companion - NIMCET Prep Master! Our app is designed to help you ace the entrance exam with a comprehensive set of features tailored to your success.
        \n
        \n
    </string>
    <string name="app_description_para2">
        \n
        📘 Latest Blogs on NIMCET:
        \n
        \n
        Stay updated with the latest news, tips, and insights about NIMCET through our regularly updated blog section. Get expert advice, exam pattern analysis, and success stories from past toppers.
        \n
        \n
        📝 Mock Tests &amp; Quizzes:
        Practice makes perfect! Access a vast library of mock tests and quizzes covering all subjects and topics in the NIMCET syllabus. Simulate the exam environment and track your progress to identify areas for improvement.
        \n
        \n
    </string>
    <string name="app_description_para3">
        \n
        🏆 Achievement Badges:
        \n
        \n
        Stay motivated and track your progress with achievement badges. Celebrate your milestones, such as completing a certain number of quizzes, achieving high scores, or consistently improving in specific subjects.
        \n
        \n
        Start your journey towards NIMCET success with NIMCET Prep Master. Download the app now and embark on the path to securing your seat in one of India premier MCA programs!
        \n
        \n
        Feel free to customize the content based on the specific features and goals of your app.
        \n
        \n
    </string>
    <string name="close">Close</string>

    <!--Mock Test String-->
    <string name="mock_test_title">Mock Test</string>
    <string name="mock_test_marks">Questions :120 question</string>
    <string name="mock_test_mark">Total Marks :1000 Marks</string>
    <string name="mock_test_duration">Duration :2 hours</string>
    <string name="question">Question</string>
    <string name="option">option </string>
    <string name="option_a">Option A</string>
    <string name="option_b">Option B</string>
    <string name="option_c">Option C</string>
    <string name="option_d">Option D</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="questionCounter">1 / 120</string>
    <string name="question_counter">%1$d / %2$d</string>
    <string name="countdown_timer_default">"00:00:00"</string>
    <string name="score">Score</string>
    <string name="_0000">0000</string>
    <string name="out_of_1000">OUT OF 1000</string>
    <string name="_2_hours_00_minutes_00_seconds">2 Hours : 00 Min : 00 Sec</string>
    <string name="date_yyyy_mm_dd">Date : YYYY/MM/DD</string>
    <string name="total_questions">Total Questions</string>
    <string name="_120">120</string>
    <string name="_000">000</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="incorrect_answer">Incorrect Answer</string>
    <string name="unattempted_questions">Unattempted Questions</string>
    <string name="question_image">Question Image</string>
    <string name="question_list">Question List</string>
    <string name="view_answer">View Answer</string>
    <string name="user_answer">User Answer</string>
    <string name="answer">Answer</string>
    <string name="Delete">Delete Your Account</string>

</resources>