<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/share_icon"
            android:icon="@drawable/share_icon"
            android:title="@string/share" />
        <item
            android:id="@+id/feedback_icon"
            android:icon="@drawable/feedback_icon"
            android:title="@string/feedback" />
        <item
            android:id="@+id/rate_us_icon"
            android:icon="@drawable/rate_us_icon"
            android:title="@string/rate_us" />
        <item
            android:id="@+id/above_icon"
            android:icon="@drawable/about_icon"
            android:title="@string/about" />
        <item
            android:id="@+id/logout_icon"
            android:icon="@drawable/logout_icon"
            android:title="@string/logout" />
    </group>

</menu>