<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:background="@color/color5"
    android:gravity="top"
    android:orientation="vertical"
    android:padding="@dimen/dimen_8dp"
    android:layout_marginTop="@dimen/dimen_16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:layout_width="86dp"
        android:layout_height="88dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/app_logo"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_transparent" />

    <TextView
        android:id="@+id/drawer_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_24sp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TextView
        android:id="@+id/drawer_user_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dimen_8dp"
        android:layout_marginEnd="@dimen/dimen_8dp"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:text="@string/user_email"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16sp"
        android:typeface="serif" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/underline" />
</LinearLayout>