<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/MockTestCardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dimen_16dp"
    android:elevation="@dimen/dimen_16dp"
    app:cardBackgroundColor="@color/mock_test_item"
    app:cardCornerRadius="@dimen/dimen_16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/mock_test_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:lineSpacingExtra="4sp"
            android:padding="4dp"
            android:text="@string/mock_test_title"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_20sp"
            android:textStyle="bold"
            android:typeface="serif" />


        <TextView
            android:id="@+id/mock_test_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4dp"
            android:lineSpacingExtra="@dimen/dimen_4dp"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/mock_test_marks"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/mock_test_mark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen_4dp"
            android:lineSpacingExtra="@dimen/dimen_4dp"
            android:padding="@dimen/dimen_4dp"
            android:text="@string/mock_test_mark"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:typeface="sans" />

        <TextView
            android:id="@+id/mock_test_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:lineSpacingExtra="4sp"
            android:padding="4dp"
            android:text="@string/mock_test_duration"
            android:textAlignment="textStart"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_16sp"
            android:typeface="serif" />
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>