<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailMockTestActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:elevation="@dimen/dimen_16dp"
        app:cardBackgroundColor="@color/mock_test_question_background"
        app:cardCornerRadius="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mock_test_question"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:layout_margin="@dimen/dimen_16dp"
                android:text="@string/question"
                android:textColor="@color/black"
                android:textSize="@dimen/dimen_24sp"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/optionA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:background="@color/optionButton"
                    android:text="@string/option_a"
                    android:textSize="@dimen/dimen_16sp" />

                <Button
                    android:id="@+id/optionB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:background="@color/optionButton"
                    android:text="@string/option_b"
                    android:textSize="@dimen/dimen_16sp" />

                <Button
                    android:id="@+id/optionC"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:background="@color/optionButton"
                    android:text="@string/option_c"
                    android:textSize="@dimen/dimen_16sp" />

                <Button
                    android:id="@+id/optionD"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="@dimen/dimen_8dp"
                    android:background="@color/optionButton"
                    android:text="@string/option_d"
                    android:textSize="@dimen/dimen_16sp" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
