<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/groupStylewhite_A700"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="start"
    android:orientation="vertical"
    tools:context=".activity_forget_password">

    <ImageButton
        android:id="@+id/btnArrowleft"
        android:layout_width="@dimen/_41pxh"
        android:layout_height="@dimen/_41pxh"
        android:layout_marginStart="@dimen/_36pxh"
        android:layout_marginTop="@dimen/_38pxv"
        android:layout_marginEnd="@dimen/_36pxh"
        android:background="@drawable/rectangle_bg_white_a700_border_indigo_50_radius_12"
        android:paddingHorizontal="@dimen/_13pxh"
        android:paddingVertical="@dimen/_13pxv"
        android:scaleType="fitCenter"
        android:src="@drawable/img_arrowleft"
        tools:ignore="ContentDescription" />

    <TextView
        style="@style/txtUrbanistromanbold30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20pxh"
        android:layout_marginTop="@dimen/_37pxv"
        android:layout_marginEnd="@dimen/_20pxh"
        android:ellipsize="end"
        android:singleLine="true"
        android:text="@string/msg_forgot_password"
        tools:text="@string/msg_forgot_password" />

    <TextView
        style="@style/txtUrbanistromanmedium16"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20pxh"
        android:layout_marginTop="@dimen/_10pxv"
        android:layout_marginEnd="@dimen/_20pxh"
        android:text="@string/msg_don_t_worry_it"
        tools:text="@string/msg_don_t_worry_it" />

    <EditText
        android:id="@+id/etForgotEmail"
        style="@style/etSolidRoundedOutline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20pxh"
        android:layout_marginTop="@dimen/_55pxv"
        android:layout_marginEnd="@dimen/_20pxh"
        android:background="@drawable/rectangle_bg_gray_50_border_gray_300_radius_8"
        android:ellipsize="end"
        android:hint="@string/msg_enter_your_emai"
        android:inputType="textEmailAddress"
        android:paddingStart="@dimen/_19pxh"
        android:paddingTop="@dimen/_21pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_16pxv"
        android:singleLine="true"
        android:textColorHint="@color/bluegray_400"
        tools:ignore="Autofill" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSendLink"
        style="@style/btnSolidRounded"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20pxh"
        android:layout_marginTop="@dimen/_30pxv"
        android:layout_marginEnd="@dimen/_20pxh"
        android:ellipsize="end"
        android:gravity="center"
        android:paddingStart="@dimen/_30pxh"
        android:paddingTop="@dimen/_19pxv"
        android:paddingEnd="@dimen/_30pxh"
        android:paddingBottom="@dimen/_19pxv"
        android:singleLine="true"
        android:text="@string/lbl_send_code"
        android:textAllCaps="false"
        tools:text="@string/lbl_send_code" />

    <TextView
        style="@style/txtPoppinssemibold15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20pxh"
        android:layout_marginTop="@dimen/_320pxv"
        android:layout_marginEnd="@dimen/_20pxh"
        android:layout_marginBottom="@dimen/_27pxv"
        android:ellipsize="end"
        android:gravity="center_horizontal"
        android:letterSpacing="0.01"
        android:singleLine="true"
        android:text="@string/msg_remember_passwo"
        tools:text="@string/msg_remember_passwo" />

</LinearLayout>